@startuml

title __SRC's Class Diagram__\n

  package  {
    abstract class Duck {
        + Duck()
        {abstract} + display()
        + performQuack()
        + performFly()
        + swim()
    }
  }
  

  package  {
    interface FlyBehavior {
        {abstract} + fly()
    }
  }
  

  package  {
    class FlyNoWay {
        + fly()
    }
  }
  

  package  {
    class FlyWithWings {
        + fly()
    }
  }
  

  package  {
    class MallardDuck {
        + MallardDuck()
        + display()
    }
  }
  

  package  {
    class MiniDuckSimulatior {
        {static} + main()
    }
  }
  

  package  {
    class MuteQuack {
        + quack()
    }
  }
  

  package  {
    class Quack {
        + quack()
    }
  }
  

  package  {
    interface QuackBahavior {
        {abstract} + quack()
    }
  }
  

  package  {
    class Squack {
        + quack()
    }
  }
  

  Duck o-- FlyBehavior : flyBehavior
  Duck o-- QuackBahavior : quackBahavior
  FlyNoWay -up-|> FlyBehavior
  FlyWithWings -up-|> FlyBehavior
  MallardDuck -up-|> Duck
  MuteQuack -up-|> QuackBahavior
  Quack -up-|> QuackBahavior
  Squack -up-|> QuackBahavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
